--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-datocms": "^7.2.2",
     "react-dom": "^18",
+    "sass": "^1.86.3",
     "serialize-error": "^11.0.3"
   },
   "devDependencies": {
